[gd_scene load_steps=9 format=3 uid="uid://0j7r813l1sp3"]

[ext_resource type="Script" path="res://view/plant_entity.gd" id="1_054sp"]
[ext_resource type="Script" path="res://synthesizer/melodie_player.gd" id="2_dbvdt"]
[ext_resource type="PackedScene" uid="uid://ciwkj06jv33r2" path="res://synthesizer/synthesizer.tscn" id="3_npu5c"]

[sub_resource type="Animation" id="Animation_2pfno"]
resource_name = "bob"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteRig:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.139972, 0.302278),
"transitions": PackedFloat32Array(1, 3.73213, 1),
"update": 0,
"values": [Vector2(0.8, 1.3), Vector2(1.3, 0.8), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_nd55k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteRig:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g6i7b"]
_data = {
"RESET": SubResource("Animation_nd55k"),
"bob": SubResource("Animation_2pfno")
}

[sub_resource type="Gradient" id="Gradient_k12gu"]
offsets = PackedFloat32Array(0.36039, 1)
colors = PackedColorArray(0, 0, 0, 0.380392, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_x5tv1"]
gradient = SubResource("Gradient_k12gu")
width = 10
height = 5
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.4)
metadata/_snap_enabled = true

[node name="PlantEntity" type="Node2D"]
script = ExtResource("1_054sp")

[node name="SpriteRig" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="SpriteRig"]
position = Vector2(0, -16)

[node name="MelodiePlayer" type="Node" parent="." node_paths=PackedStringArray("synthesizer")]
script = ExtResource("2_dbvdt")
synthesizer = NodePath("../Synthesizer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g6i7b")
}

[node name="Sprite2D2" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_x5tv1")

[node name="Synthesizer" parent="." instance=ExtResource("3_npu5c")]
